--- a/a2cli/package.json
+++ b/a2cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a2cli",
+  "name": "MoldeoJS",
   "version": "0.0.1",
   "license": "MIT",
   "angular-cli": {},
@@ -22,7 +22,10 @@
     "@angular/platform-browser": "2.4.2",
     "@angular/platform-browser-dynamic": "2.4.2",
     "@angular/router": "3.4.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "ng2-bootstrap": "^1.2.0",
+    "node-osc": "^2.0.4",
     "rxjs": "5.0.3",
     "three": "^0.83.0",
     "ts-helpers": "^1.1.2",
