Loading first full XML moldeo config with params and valuesnpm install! Working nice, .mol is loaded in moConsole::m_Config > Next: create and test renderer, then load effects.

--- a/a2cli/src/tsconfig.json
+++ b/a2cli/src/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "",
     "declaration": false,
@@ -14,6 +15,7 @@
     "allowJs": true,
     "typeRoots": [
       "../node_modules/@types"
-    ]
+    ],
+    "types": []
   }
 }
