--- a/a2cli/package.json
+++ b/a2cli/package.json
@@ -1,7 +1,12 @@
 {
   "name": "MoldeoJS",
   "version": "0.0.1",
-  "license": "MIT",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/angular/angular.io/blob/master/LICENSE"
+    }
+  ],
   "angular-cli": {},
   "scripts": {
     "start": "ng serve --host 0.0.0.0 --port 4201",
@@ -30,15 +35,17 @@
     "rxjs": "5.0.3",
     "three": "^0.83.0",
     "ts-helpers": "^1.1.2",
+    "xml2js": "^0.4.17",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.4.2",
-    "@types/jasmine": "2.5.40",
+    "@types/jasmine": "^2.5.41",
     "@types/node": "^7.0.0",
     "@types/three": "^0.81.0",
     "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.4",
+    "jasmine": "^2.5.2",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.1.0",
     "karma": "1.3.0",
