--- a/a2cli/src/molrepos/basic/00_Image/image.cfg
+++ b/a2cli/src/molrepos/basic/00_Image/image.cfg
@@ -12,7 +12,7 @@
         </PARAM>
         <PARAM name="alpha" type="ALPHA" property="published">
             <VAL>
-                <D type="FUNCTION">0.9</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="color" type="COLOR" property="published">
@@ -35,7 +35,7 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
-                <D type="TXT">default</D>
+                <D type="TXT">libmoldeo.png</D>
             </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING">
@@ -65,22 +65,22 @@
         </PARAM>
         <PARAM name="pos_cuad_x" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0</D>
+                <D type="FUNCTION">0.1*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="pos_cuad_y" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.1*sin(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="anc_cuad_x" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.8+0.2*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="alt_cuad_y" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.8+0.2*cos(time)</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
