Added plane and particles

--- a/a2cli/src/molrepos/basic/01_Icon/icon.cfg
+++ b/a2cli/src/molrepos/basic/01_Icon/icon.cfg
@@ -66,7 +66,7 @@
         </PARAM>
         <PARAM name="translatex" type="TRANSLATEX">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.1+0.1*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
@@ -76,12 +76,12 @@
         </PARAM>
         <PARAM name="rotate" type="ROTATEZ">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">1.0*time</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0+0.5*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
