--- a/a2cli/src/molrepos/basic/02_Plane/plane.cfg
+++ b/a2cli/src/molrepos/basic/02_Plane/plane.cfg
@@ -17,14 +17,22 @@
         </PARAM>
         <PARAM name="alpha" type="ALPHA">
             <VAL>
-                <D type="FUNCTION">1.0*abs(cos(time))</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION" code="RED">0.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
                 <D type="FUNCTION" code="GREEN">1.0</D>
-                <D type="FUNCTION" code="BLUE">0.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
+                <D type="FUNCTION" code="ALPHA">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="colorflip" type="COLOR">
+            <VAL>
+                <D type="FUNCTION" code="RED">1.0</D>
+                <D type="FUNCTION" code="GREEN">1.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
                 <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
@@ -43,6 +51,11 @@
                 <D type="TXT">default</D>
             </VAL>
         </PARAM>
+        <PARAM name="textureflip" type="TEXTURE">
+            <VAL>
+                <D type="TXT">defaultflip</D>
+            </VAL>
+        </PARAM>
         <PARAM name="blending" type="BLENDING">
             <VAL>
                 <D type="NUM">0</D>
@@ -50,7 +63,7 @@
         </PARAM>
         <PARAM name="width" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0+0.1*cos(time)</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="height" type="FUNCTION">
@@ -60,27 +73,27 @@
         </PARAM>
         <PARAM name="translatex" type="TRANSLATEX">
             <VAL>
-                <D type="FUNCTION">0.0+0.4*cos(time)</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
             <VAL>
-                <D type="FUNCTION">0.0+0.4*cos(time)</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="translatez" type="TRANSLATEZ">
             <VAL>
-                <D type="FUNCTION">-2.0+2.0*cos(time)</D>
+                <D type="FUNCTION">-1.0+1*cos(time*0.1)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
             <VAL>
-                <D type="FUNCTION">45.0</D>
+                <D type="FUNCTION">45+45*cos(time*0.05)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">360.0*time</D>
+                <D type="FUNCTION">300*time</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ">
@@ -90,12 +103,12 @@
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0+0.4*cos(time)</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0+0.4*cos(time)</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez" type="SCALEZ">
