--- a/a2cli/src/molrepos/basic/07_ParticlesSimple/plane.cfg
+++ b/a2cli/src/molrepos/basic/07_ParticlesSimple/plane.cfg
@@ -17,14 +17,14 @@
         </PARAM>
         <PARAM name="alpha" type="ALPHA">
             <VAL>
-                <D type="FUNCTION">1.0*abs(cos(time))</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="color" type="COLOR">
             <VAL>
-                <D type="FUNCTION" code="RED">0.0</D>
+                <D type="FUNCTION" code="RED">1.0</D>
                 <D type="FUNCTION" code="GREEN">1.0</D>
-                <D type="FUNCTION" code="BLUE">0.0</D>
+                <D type="FUNCTION" code="BLUE">1.0</D>
                 <D type="FUNCTION" code="ALPHA">1.0</D>
             </VAL>
         </PARAM>
