--- a/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
+++ b/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
@@ -200,17 +200,17 @@
         </PARAM>
         <PARAM name="emittervectorx" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectory" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectorz" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="randomposition" type="FUNCTION">
@@ -280,7 +280,7 @@
         </PARAM>
         <PARAM name="rotatey_particle" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">100*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez_particle" type="ROTATEZ">
@@ -295,7 +295,7 @@
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0+0.2*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez_particle" type="SCALEZ">
@@ -340,7 +340,7 @@
         </PARAM>
         <PARAM name="translatez" type="TRANSLATEZ">
             <VAL>
-                <D type="FUNCTION">-20.0</D>
+                <D type="FUNCTION">1.0*cos(time*1)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
@@ -350,7 +350,7 @@
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">20*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ">
@@ -399,6 +399,21 @@
             </VAL>
         </PARAM>
         <PARAM name="viewz" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="upviewx" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">0.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="upviewy" type="FUNCTION">
+            <VAL>
+                <D type="FUNCTION">1.0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="upviewz" type="FUNCTION">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
