--- a/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
+++ b/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
@@ -60,7 +60,7 @@
         </PARAM>
         <PARAM name="folders" type="TEXTUREFOLDER">
             <VAL>
-                <D type="TXT"></D>
+                <D type="TXT">images</D>
             </VAL>
         </PARAM>
         <PARAM name="texture_mode" type="NUM">
@@ -75,12 +75,12 @@
         </PARAM>
         <PARAM name="width" type="NUM">
             <VAL>
-                <D type="NUM">20</D>
+                <D type="NUM">10</D>
             </VAL>
         </PARAM>
         <PARAM name="height" type="NUM">
             <VAL>
-                <D type="NUM">20</D>
+                <D type="NUM">10</D>
             </VAL>
         </PARAM>
         <PARAM name="sizex" type="FUNCTION">
@@ -100,7 +100,7 @@
         </PARAM>
         <PARAM name="gravity" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">1.5</D>
             </VAL>
         </PARAM>
         <PARAM name="viscosity" type="FUNCTION">
@@ -110,17 +110,17 @@
         </PARAM>
         <PARAM name="maxage" type="NUM">
             <VAL>
-                <D type="NUM">6000</D>
+                <D type="NUM">10000</D>
             </VAL>
         </PARAM>
         <PARAM name="emitionperiod" type="NUM">
             <VAL>
-                <D type="NUM">100</D>
+                <D type="NUM">20</D>
             </VAL>
         </PARAM>
         <PARAM name="emitionrate" type="NUM">
             <VAL>
-                <D type="NUM">20</D>
+                <D type="NUM">2</D>
             </VAL>
         </PARAM>
         <PARAM name="deathperiod" type="NUM">
@@ -280,7 +280,7 @@
         </PARAM>
         <PARAM name="rotatey_particle" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">100*cos(time)</D>
+                <D type="FUNCTION">0*cos(time)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez_particle" type="ROTATEZ">
@@ -295,7 +295,7 @@
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0+0.2*cos(time)</D>
+                <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez_particle" type="SCALEZ">
@@ -350,7 +350,7 @@
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">20*cos(time)</D>
+                <D type="FUNCTION">time*30</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ">
