Removing http upload, and fixing texture buffer load

--- a/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
+++ b/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
@@ -57,6 +57,9 @@
             <VAL>
                 <D type="TXT">default</D>
             </VAL>
+            <VAL>
+                <D type="TXT">default</D>
+            </VAL>
         </PARAM>
         <PARAM name="folders" type="TEXTUREFOLDER">
             <VAL>
