For raycaster to work, we must ue camera at 0,0,0 and looking at 0,0,-1

--- a/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
+++ b/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
@@ -18,6 +18,11 @@
                 <D type="FUNCTION">1.0</D>
             </VAL>
         </PARAM>
+        <PARAM name="script" type="SCRIPT">
+            <VAL>
+                <D type="TXT">particlessimple.js</D>
+            </VAL>
+        </PARAM>
         <PARAM name="syncro" type="SYNC">
             <VAL>
                 <D type="FUNCTION">1.0</D>
@@ -78,12 +83,12 @@
         </PARAM>
         <PARAM name="width" type="NUM">
             <VAL>
-                <D type="NUM">10</D>
+                <D type="NUM">20</D>
             </VAL>
         </PARAM>
         <PARAM name="height" type="NUM">
             <VAL>
-                <D type="NUM">10</D>
+                <D type="NUM">20</D>
             </VAL>
         </PARAM>
         <PARAM name="sizex" type="FUNCTION">
@@ -103,7 +108,7 @@
         </PARAM>
         <PARAM name="gravity" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.5</D>
+                <D type="FUNCTION">0</D>
             </VAL>
         </PARAM>
         <PARAM name="viscosity" type="FUNCTION">
@@ -238,22 +243,22 @@
         </PARAM>
         <PARAM name="randomvelocity" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">6.0</D>
+                <D type="FUNCTION">0*6.0</D>
             </VAL>
         </PARAM>
         <PARAM name="randomvelocityx" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0*1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="randomvelocityy" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0*1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="randomvelocityz" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0*1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="randommotion" type="FUNCTION">
@@ -343,7 +348,7 @@
         </PARAM>
         <PARAM name="translatez" type="TRANSLATEZ">
             <VAL>
-                <D type="FUNCTION">1.0*cos(time*1)</D>
+                <D type="FUNCTION">-10+0*1.0*cos(time*1)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
@@ -353,7 +358,7 @@
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">time*30</D>
+                <D type="FUNCTION">0*time*30</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ">
@@ -388,7 +393,7 @@
         </PARAM>
         <PARAM name="eyez" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">10.0</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="viewx" type="FUNCTION">
@@ -403,7 +408,7 @@
         </PARAM>
         <PARAM name="viewz" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">-1.0</D>
             </VAL>
         </PARAM>
         <PARAM name="upviewx" type="FUNCTION">
