Fixing more parameters

--- a/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
+++ b/a2cli/src/molrepos/basic/07_ParticlesSimple/particlessimple.cfg
@@ -348,7 +348,7 @@
         </PARAM>
         <PARAM name="translatez" type="TRANSLATEZ">
             <VAL>
-                <D type="FUNCTION">-10+0*1.0*cos(time*1)</D>
+                <D type="FUNCTION">0*1.0*cos(time*1)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
@@ -358,7 +358,7 @@
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">0*time*30</D>
+                <D type="FUNCTION">1*time*30</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ">
@@ -393,7 +393,7 @@
         </PARAM>
         <PARAM name="eyez" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">10.0</D>
             </VAL>
         </PARAM>
         <PARAM name="viewx" type="FUNCTION">
@@ -408,7 +408,7 @@
         </PARAM>
         <PARAM name="viewz" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">-1.0</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="upviewx" type="FUNCTION">
