--- a/a2cli/package.json
+++ b/a2cli/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "3.4.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "mathjs": "^3.9.1",
     "ng2-bootstrap": "^1.2.0",
     "node-osc": "^2.0.4",
@@ -49,6 +50,7 @@
     "@types/mathjs": "0.0.33",
     "@types/node": "^7.0.0",
     "@types/three": "^0.81.0",
+    "@types/hammerjs": "^2.0.34",
     "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.4",
     "electron": "^1.4.15",
