--- a/a2cli/package.json
+++ b/a2cli/package.json
@@ -21,6 +21,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "0.0.43",
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -33,16 +34,14 @@
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/webrtc": "0.0.22",
-    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "mathjs": "^3.9.1",
-    "ngx-bootstrap": "^2.0.0-rc.0",
     "node-osc": "^2.0.4",
-    "rxjs": "5.4.3",
+    "rxjs": "^5.5.6",
     "three": "^0.83.0",
     "ts-helpers": "^1.1.2",
     "xml2js": "^0.4.17",
-    "zone.js": "^0.7.4"
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "^1.6.3",
@@ -51,7 +50,7 @@
     "@types/mathjs": "0.0.33",
     "@types/node": "^7.0.0",
     "@types/three": "^0.81.0",
-    "codelyzer": "~2.0.0",
+    "codelyzer": "^4.0.2",
     "electron": "^1.4.15",
     "electron-packager": "^8.5.1",
     "jasmine": "^2.5.2",
@@ -60,11 +59,12 @@
     "karma": "1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "^1.1.0",
-    "karma-remap-istanbul": "^0.4.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
+    "tslint": "^5.9.1",
     "typescript": "2.5.3",
     "webdriver-manager": "11.1.1"
   }
