--- a/a2cli/package.json
+++ b/a2cli/package.json
@@ -35,6 +35,7 @@
     "@angular/router": "^5.2.0",
     "@types/webrtc": "0.0.22",
     "core-js": "^2.4.1",
+    "jsfeat": "0.0.8",
     "mathjs": "^3.9.1",
     "node-osc": "^2.0.4",
     "rxjs": "^5.5.6",
@@ -45,7 +46,6 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.6.3",
-    "@angular/compiler-cli": "2.4.2",
     "@types/jasmine": "^2.5.41",
     "@types/mathjs": "0.0.33",
     "@types/node": "^7.0.0",
