--- a/a2cli/package.json
+++ b/a2cli/package.json
@@ -34,12 +34,15 @@
     "@angular/platform-server": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/webrtc": "0.0.22",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "mathjs": "^3.9.1",
+    "ngx-bootstrap": "^2.0.1",
     "node-osc": "^2.0.4",
     "rxjs": "^5.5.6",
     "three": "^0.83.0",
     "ts-helpers": "^1.1.2",
+    "xml-js": "^1.6.2",
     "xml2js": "^0.4.17",
     "zone.js": "^0.8.20"
   },
