--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "mathjs": "^3.9.1",
+    "ng-socket-io": "^0.2.4",
     "ngx-bootstrap": "^2.0.1",
     "node-osc": "^2.0.4",
     "rxjs": "^5.5.6",
