Add basic ng-element

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     }
   ],
   "scripts": {
-    "start": "ng serve -p 18080",
+    "start": "ng serve --port 18080",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "build": "ng build && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data",
+    "build:elements": "ng build --prod --output-hashing none && node concatenate.js",
     "prepare": "cp -a electron/. dist/",
     "electron": "npm run prepare && electron ./dist",
     "package": "npm run build && npm run prepare && ./node_modules/electron-packager/cli.js dist App --platform=linux --arch=all --out=dist-app --overwrite",
@@ -21,54 +22,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "0.0.43",
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/platform-server": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "@types/webrtc": "0.0.22",
-    "bootstrap": "^3.3.7",
+    "@angular-devkit/schematics": "0.7.2",
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/elements": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/platform-server": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "@types/webrtc": "0.0.23",
+    "bootstrap": "^4.1.3",
+    "concat": "^1.0.3",
     "core-js": "^2.4.1",
-    "mathjs": "^3.9.1",
-    "ngx-bootstrap": "^2.0.1",
+    "document-register-element": "^1.11.0",
+    "fs-extra": "^7.0.0",
+    "mathjs": "^5.0.4",
+    "ngx-bootstrap": "^3.0.1",
     "node-osc": "^2.0.4",
-    "rxjs": "^5.5.6",
-    "three": "^0.83.0",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "three": "0.83.0",
     "ts-helpers": "^1.1.2",
     "xml-js": "^1.6.2",
     "xml2js": "^0.4.17",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.3",
-    "@angular/compiler-cli": "2.4.2",
+    "@angular-devkit/build-angular": "^0.7.2",
+    "@angular/cli": "^6.1.2",
     "@types/jasmine": "^2.5.41",
-    "@types/mathjs": "0.0.33",
-    "@types/node": "^7.0.0",
-    "@types/three": "^0.81.0",
+    "@types/mathjs": "4.4.1",
+    "@types/node": "^10.5.5",
+    "@types/three": "0.81.0",
     "codelyzer": "^4.0.2",
-    "electron": "^1.4.15",
-    "electron-packager": "^8.5.1",
-    "jasmine": "^2.5.2",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.1.0",
-    "karma": "1.3.0",
+    "electron": "^2.0.6",
+    "electron-packager": "^12.1.0",
+    "jasmine": "^3.1.0",
+    "jasmine-core": "3.1.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "2.0.5",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
     "tslint": "^5.9.1",
-    "typescript": "2.5.3",
-    "webdriver-manager": "11.1.1"
+    "typescript": "^2.7.2",
+    "webdriver-manager": "12.1.0"
   }
 }
