Updated , fixes and others

--- a/src/assets/molrepos/moldeoorg/Speak/textaforming.cfg
+++ b/src/assets/molrepos/moldeoorg/Speak/textaforming.cfg
@@ -20,7 +20,7 @@
         </PARAM>
         <PARAM name="script" type="SCRIPT">
             <VAL>
-                <D type="TXT">particlessimple.js</D>
+                <D type="TXT">textaforming.js</D>
             </VAL>
         </PARAM>
         <PARAM name="syncro" type="SYNC">
@@ -60,7 +60,7 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
-                <D type="TXT">LIVEIN0</D>
+                <D type="TXT">cuad.png</D>
             </VAL>
         </PARAM>
         <PARAM name="folders" type="TEXTUREFOLDER">
@@ -205,17 +205,17 @@
         </PARAM>
         <PARAM name="emittervectorx" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0*0.5</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectory" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0*0.5</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectorz" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0*0.5</D>
             </VAL>
         </PARAM>
         <PARAM name="randomposition" type="FUNCTION">
