Added electron and final fixes for Speak js

--- a/src/assets/molrepos/moldeoorg/Speak/ojos.cfg
+++ b/src/assets/molrepos/moldeoorg/Speak/ojos.cfg
@@ -35,10 +35,10 @@
         </PARAM>
         <PARAM name="particlecolor" type="COLOR">
             <VAL>
-                <D type="FUNCTION">0.5+0.3*cos(particleindex*123445)</D>
-                <D type="FUNCTION">0.5+0.3*cos(particleindex*1235)</D>
-                <D type="FUNCTION">0.5+0.3*cos(particleindex*1235) + 0.5*abs(cos(time*3)) </D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.5+0.3*(cos(particleindex*123445))</D>
+                <D type="FUNCTION">0.5+0.3*(cos(particleindex*1235))</D>
+                <D type="FUNCTION">0.5+0.3*(cos(particleindex*1235) + 0.5*abs(cos(time*3)))</D>
+                <D type="FUNCTION">0.95-scalex_particle*0.1</D>
             </VAL>
         </PARAM>
         <PARAM name="font" type="FONT">
@@ -61,6 +61,12 @@
         <PARAM name="texture" type="TEXTURE">
             <VAL>
                 <D type="TXT">circuloblanco.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">oed_logo_eye.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">circuloblanco_trans.png</D>
             </VAL>
         </PARAM>
         <PARAM name="folders" type="TEXTUREFOLDER">
@@ -155,12 +161,12 @@
         </PARAM>
         <PARAM name="fadein" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0</D>
+                <D type="FUNCTION">0.01</D>
             </VAL>
         </PARAM>
         <PARAM name="fadeout" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0</D>
+                <D type="FUNCTION">0.01</D>
             </VAL>
         </PARAM>
         <PARAM name="sizein" type="FUNCTION">
@@ -205,17 +211,17 @@
         </PARAM>
         <PARAM name="emittervectorx" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*1.2</D>
+                <D type="FUNCTION">1.0*1.1</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectory" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*1.2</D>
+                <D type="FUNCTION">1.0*1.1</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectorz" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*1.2</D>
+                <D type="FUNCTION">1.0*1.1</D>
             </VAL>
         </PARAM>
         <PARAM name="randomposition" type="FUNCTION">
@@ -260,47 +266,47 @@
         </PARAM>
         <PARAM name="randommotion" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.7</D>
             </VAL>
         </PARAM>
         <PARAM name="randommotionx" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.01</D>
             </VAL>
         </PARAM>
         <PARAM name="randommotiony" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.01</D>
             </VAL>
         </PARAM>
         <PARAM name="randommotionz" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0.0</D>
+                <D type="FUNCTION">0.01</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatex_particle" type="ROTATEX">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">0.5*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatey_particle" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">360*cos(time*0.001)</D>
+                <D type="FUNCTION">1.0*rotatey+0*360*cos(time*0.001)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez_particle" type="ROTATEZ">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">0.5*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex_particle" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.5+0.5*cos(time*0.001)*(1.0+0.9*cos(time+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234))</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.5+0.5*cos(time*0.001)*(1.0+0.9*cos(time+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234))</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez_particle" type="SCALEZ">
@@ -350,17 +356,17 @@
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">0.1*time*30</D>
+                <D type="FUNCTION">0.05*time*30</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">15+0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
