--- a/src/assets/molrepos/moldeoorg/Speak/particlessimple.cfg
+++ b/src/assets/molrepos/moldeoorg/Speak/particlessimple.cfg
@@ -35,10 +35,10 @@
         </PARAM>
         <PARAM name="particlecolor" type="COLOR">
             <VAL>
-                <D type="FUNCTION">0.5+0.3*cos(particleindex*123445)</D>
-                <D type="FUNCTION">0.5+0.3*cos(particleindex*1235)</D>
-                <D type="FUNCTION">0.5+0.3*cos(particleindex*1235) + 0.5*abs(cos(time*3)) </D>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.6+0.2*(cos(particleindex*123445))</D>
+                <D type="FUNCTION">0.6+0.2*(cos(particleindex*1235))</D>
+                <D type="FUNCTION">0.6+0.2*(cos(particleindex*1235) + 0.5*abs(cos(time*3))) </D>
+                <D type="FUNCTION">0.95</D>
             </VAL>
         </PARAM>
         <PARAM name="font" type="FONT">
@@ -280,27 +280,27 @@
         </PARAM>
         <PARAM name="rotatex_particle" type="ROTATEX">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">90+0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatey_particle" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">360*cos(time*0.001)</D>
+                <D type="FUNCTION">0*360*cos(time*0.001)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez_particle" type="ROTATEZ">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">1*rotatey+0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex_particle" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0+0.3*cos(time+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234)</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">1.0+0.3*cos(time+0.01+particleindex*1234)+0.015*cos(time*100+particleindex*1234)</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez_particle" type="SCALEZ">
@@ -350,17 +350,17 @@
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">90+0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">0.1*time*30</D>
+                <D type="FUNCTION">0.1618*time*30</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">0*0.3*time*30+0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
