--- a/src/assets/molrepos/moldeoorg/Speak/textaforming.cfg
+++ b/src/assets/molrepos/moldeoorg/Speak/textaforming.cfg
@@ -60,6 +60,12 @@
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
             <VAL>
+                <D type="TXT">trianguloborde_blanco.png</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">triangulo_blanco.png</D>
+            </VAL>
+            <VAL>
                 <D type="TXT">cuad.png</D>
             </VAL>
         </PARAM>
@@ -105,7 +111,10 @@
         </PARAM>
         <PARAM name="gravity" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">0*(milliseconds>8000)*1.0</D>
+                <D type="FUNCTION">-1.0*cos(time)*0</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">-1.0*abs(milliseconds>8000)</D>
             </VAL>
         </PARAM>
         <PARAM name="viscosity" type="FUNCTION">
@@ -202,20 +211,23 @@
             <VAL>
                 <D type="NUM">1</D>
             </VAL>
+            <VAL>
+                <D type="NUM">7</D>
+            </VAL>
         </PARAM>
         <PARAM name="emittervectorx" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*0.5</D>
+                <D type="FUNCTION">1.0*(0.3+0.3*cos(time*0.5))</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectory" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*0.5</D>
+                <D type="FUNCTION">1.0*(0.3+0.3*cos(time*0.5))</D>
             </VAL>
         </PARAM>
         <PARAM name="emittervectorz" type="FUNCTION">
             <VAL>
-                <D type="FUNCTION">1.0*0.5</D>
+                <D type="FUNCTION">emittervectorx</D>
             </VAL>
         </PARAM>
         <PARAM name="randomposition" type="FUNCTION">
@@ -280,27 +292,27 @@
         </PARAM>
         <PARAM name="rotatex_particle" type="ROTATEX">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatey_particle" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">360*cos(time*0.001)</D>
+                <D type="FUNCTION">1.0*rotatey+0*360*cos(time*0.001)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez_particle" type="ROTATEZ">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">scalex_particle*20+0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex_particle" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.5+0.5*cos(time*0.001*0)*(1.0*0.2+0.5*cos(time*4+particleindex))</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley_particle" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">1.0</D>
+                <D type="FUNCTION">0.5+0.5*cos(time*0.001*0)*(1.0*0.2+0.5*cos(time*4+particleindex))</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez_particle" type="SCALEZ">
@@ -350,17 +362,17 @@
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatey" type="ROTATEY">
             <VAL>
-                <D type="FUNCTION">0.1*time*30</D>
+                <D type="FUNCTION">0.5*time*30</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatez" type="ROTATEZ">
             <VAL>
-                <D type="FUNCTION">33*cos(time*0.01)</D>
+                <D type="FUNCTION">30+0*33*cos(time*0.01)</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
