--- a/package.json
+++ b/package.json
@@ -1,75 +1,103 @@
 {
   "name": "MoldeoJS",
-  "version": "0.0.1",
+  "version": "0.9.1",
+  "author": {
+    "name": "Fabricio Costa",
+    "email": "fabricio.costa@moldeointeractive.com.ar"
+  },
+  "description": "Moldeo JS Speak Project",
   "licenses": [
     {
       "type": "MIT",
       "url": "https://github.com/angular/angular.io/blob/master/LICENSE"
     }
   ],
+  "browser": {},
+  "main": "main.js",
   "scripts": {
-    "start": "ng serve -p 18080",
+    "dist": "build --linux",
+    "start": "ng serve --port 18080",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
+    "ng:serve": "ng serve",
+    "ng:serve:web": "npm run postinstall:web && ng serve -o",
+    "build": "ng build && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data",
+    "build:dev": "npm run build -- -c dev",
+    "build:prod": "npm run build -- -c production",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "build": "ng build && cp -R src/assets/molrepos dist/molrepos && cp -R src/assets/data dist/data",
     "prepare": "cp -a electron/. dist/",
     "electron": "npm run prepare && electron ./dist",
+    "electron:local": "npm run build && electron .",
     "package": "npm run build && npm run prepare && ./node_modules/electron-packager/cli.js dist App --platform=linux --arch=all --out=dist-app --overwrite",
+    "packagex64": "npm run build && npm run prepare && ./node_modules/electron-packager/cli.js dist App --platform=linux --arch=x64 --out=dist-app --overwrite",
     "buildelectron": "npm run build && npm run electron"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "0.0.43",
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/platform-server": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "@types/webrtc": "0.0.22",
-    "bootstrap": "^3.3.7",
+    "@angular-devkit/schematics": "0.7.2",
+    "@angular/animations": "^6.1.0",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/elements": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/platform-server": "^6.1.0",
+    "@angular/router": "^6.1.0",
+    "@types/webrtc": "0.0.23",
+    "bootstrap": "^4.1.3",
+    "bufferutil": "^4.0.0",
+    "concat": "^1.0.3",
     "core-js": "^2.4.1",
-    "mathjs": "^3.9.1",
+    "fs-extra": "^7.0.0",
+    "jquery": "^3.3.1",
+    "mathjs": "^5.0.4",
     "ng-socket-io": "^0.2.4",
-    "ngx-bootstrap": "^2.0.1",
+    "ngx-bootstrap": "^3.0.1",
+    "ngx-socket-io": "^1.1.1",
     "node-osc": "^2.1.0",
-    "rxjs": "^5.5.6",
-    "three": "^0.83.0",
+    "osc": "^2.2.4",
+    "osc-js": "^1.2.2",
+    "popper.js": "^1.14.4",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "stream": "0.0.2",
+    "three": "^0.96.0",
     "ts-helpers": "^1.1.2",
+    "utf-8-validate": "^5.0.1",
     "xml-js": "^1.6.2",
     "xml2js": "^0.4.17",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.3",
-    "@angular/compiler-cli": "2.4.2",
+    "@angular-devkit/build-angular": "^0.7.2",
+    "@angular/cli": "^6.1.2",
     "@types/jasmine": "^2.5.41",
-    "@types/mathjs": "0.0.33",
-    "@types/node": "^7.0.0",
-    "@types/three": "^0.81.0",
+    "@types/mathjs": "4.4.1",
+    "@types/node": "^10.5.5",
+    "@types/three": "0.81.0",
+    "angular-web-crypto": "0.0.12-b",
     "codelyzer": "^4.0.2",
-    "electron": "^1.4.15",
-    "electron-packager": "^8.5.1",
-    "jasmine": "^2.5.2",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.1.0",
-    "karma": "1.3.0",
+    "electron": "^3.0.5",
+    "electron-builder": "^20.28.4",
+    "electron-packager": "^12.2.0",
+    "jasmine": "^3.1.0",
+    "jasmine-core": "3.1.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "2.0.5",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
-    "ts-node": "~2.0.0",
+    "karma-jasmine-html-reporter": "^1.2.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
     "tslint": "^5.9.1",
-    "typescript": "2.5.3",
-    "webdriver-manager": "11.1.1"
+    "typescript": "^2.7.2",
+    "webdriver-manager": "12.1.0"
   }
 }
